# OpenCV_Learning

RedEyeRemover/: removeRedEyes
learning/: CMakeLists.txt  learn.py  main.cpp
